<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/asteroid_list_item_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_list_item"
    android:focusable="true"
    android:descendantFocusability="afterDescendants"
    android:layout_marginBottom="@dimen/margin_list_item">

    <ImageView
        android:id="@+id/asteroid_image_view"
        style="@style/AsteroidImageViewStyle"
        android:contentDescription="@string/asteroid_image_content_description"
        android:padding="@dimen/margin_list_item"
        android:src="@drawable/asteroid_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asteroid_name_label_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/asteroid_image_view"
        app:layout_constraintTop_toTopOf="@id/asteroid_image_view" />

    <TextView
        android:id="@+id/asteroid_name_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/asteroid_name_label_text_view"
        tools:text="2015 TX237" />

    <TextView
        android:id="@+id/asteroid_diameter_label_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        android:text="@string/diameter_label"
        app:layout_constraintStart_toStartOf="@id/asteroid_name_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/asteroid_name_text_view" />

    <TextView
        android:id="@+id/asteroid_diameter_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/asteroid_diameter_label_text_view"
        tools:text="58 - 130 km" />

    <TextView
        android:id="@+id/asteroid_approach_date_label_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        android:text="@string/approach_date_label"
        app:layout_constraintStart_toStartOf="@id/asteroid_name_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/asteroid_diameter_label_text_view" />

    <TextView
        android:id="@+id/asteroid_approach_date_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/asteroid_approach_date_label_text_view"
        tools:text="2018-Sep-06" />

    <TextView
        android:id="@+id/asteroid_velocity_label_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        android:text="@string/velocity_label"
        app:layout_constraintStart_toStartOf="@id/asteroid_name_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/asteroid_approach_date_label_text_view" />

    <TextView
        android:id="@+id/asteroid_velocity_text_view"
        style="@style/AsteroidLabelTextViewStyle"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/asteroid_velocity_label_text_view"
        tools:text="13715,74 km/h" />

    <Button
        android:id="@+id/asteroid_read_more_button"
        style="@style/ButtonStyle"
        android:text="@string/read_more_button"
        app:layout_constraintStart_toStartOf="@id/asteroid_name_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/asteroid_velocity_label_text_view" />

    <ImageView
        android:id="@+id/asteroid_hazardous_image"
        style="@style/AsteroidImageViewStyle"
        android:layout_marginEnd="@dimen/margin"
        android:contentDescription="@string/asteroid_hazardous_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/asteroid_name_text_view"
        tools:src="@drawable/not_hazardous_image" />

    <TextView
        android:id="@+id/asteroid_hazardous_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:textAppearance="?android:textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="@id/asteroid_hazardous_image"
        app:layout_constraintStart_toStartOf="@id/asteroid_hazardous_image"
        app:layout_constraintTop_toBottomOf="@id/asteroid_hazardous_image"
        tools:text="@string/asteroid_hazardous_text"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_start" />
</androidx.constraintlayout.widget.ConstraintLayout>